# ids-daps-client-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: rust.yml
src/: cache.rs  cert.rs  config.rs  lib.rs
src/http_client/: mod.rs  reqwest_client.rs
testdata/: connector-certificate.p12
