[package]
edition = "2021"

name = "ids-daps-client"
description = "A client to connect with the IDS DAPS."
version = "0.1.0"
license-file = "LICENSE"
repository = "https://github.com/truzzt/ids-daps-client-rs"
readme = "README.md"
authors = ["Maximilian Schoenenberg <maximilian@schoenenberg.email>"]
keywords = ["ids", "daps", "client", "dataspace"]

exclude = ["testdata/*"]

[dependencies]
async-lock = "3.4.0"
async-trait = "0.1.81"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
derive_builder = "0.20.0"
jsonwebtoken = "9.3.0"
openssl = "0.10.66"
reqwest = { version = "0.12.5", features = ["json", "http2"], optional = true}
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1"
tracing = "0.1.40"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v7"] }

[dev-dependencies]
testcontainers = { version = "0.23" }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["dep:reqwest"]
